Bug 407330 - clearing scratchpad crashes krita
Summary: clearing scratchpad crashes krita
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2019-05-08 13:25 UTC by Scott Petrovic
Modified: 2019-05-09 18:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scott Petrovic 2019-05-08 13:25:13 UTC
SUMMARY
Testing the Krita alpha release on windows 64-bit. There is a crash when clearing the scratchpad (I think other scratchpad commands do this too)


STEPS TO REPRODUCE
1. Create new document
2. Open brush editor and make a dab in the scratchpad
3. hit the clear scratchpad button at the bottom

OBSERVED RESULT
Krita hangs and closes

EXPECTED RESULT
Krita doesn't close and clears the scratchpad


SOFTWARE/OS VERSIONS
Windows: 10
Comment 1 Halla Rempt 2019-05-08 13:29:15 UTC
Hangs on Linux.
Comment 2 Halla Rempt 2019-05-08 13:30:15 UTC
4.2.0-preview2 was still okay, so I guess it's time for bisecting.
Comment 3 Gremriel 2019-05-08 13:44:56 UTC
This happens with every version since krita-nightly-x64-v4.2.0-HDR-307-g96b04eda2b, which doesn't have the problem.
Comment 4 Gremriel 2019-05-08 13:51:20 UTC
My bad, krita-nightly-x64-v4.2.0-HDR-328-g0a552f7b72 is the first version that has this issue.
Comment 5 Halla Rempt 2019-05-08 14:18:12 UTC
commit 0ed30208c97a8374b8c2b0b04f8d51b9b119d83b (HEAD)
Author: Dmitry Kazakov <dimula73@gmail.com>
Date:   Sat May 4 18:43:08 2019 +0300

    Implement a projection store for masks (for indirect painting)


Broke this functionality.
Comment 6 Dmitry Kazakov 2019-05-09 18:02:39 UTC
Git commit b789081beefe53d1dfb581520a7a2defa29ae360 by Dmitry Kazakov.
Committed on 09/05/2019 at 18:01.
Pushed by dkazakov into branch 'master'.

Fix deadlock in KisSafeNodeProjectionStoreBase

In scratchpad we do everything in a single thread

M  +1    -0    libs/image/KisSafeNodeProjectionStore.cpp

https://invent.kde.org/kde/krita/commit/b789081beefe53d1dfb581520a7a2defa29ae360