Fix deadlock in KisSafeNodeProjectionStoreBase

In scratchpad we do everything in a single thread

BUG:407330